--- a/client/templates/sightings.html
+++ b/client/templates/sightings.html
@@ -1,25 +1,24 @@
 <h1>Duck sightings</h1>
 
-<button type="button" class="btn btn-success" data-ng-click="openModal()"
-        data-toggle="modal"><span
+<button type="button" id="add-button" class="btn btn-success"
+        data-ng-click=""><span
         class="glyphicon glyphicon-plus"></span> Add sighting
 </button>
 
 <div class="panel panel-default" data-ng-repeat="sighting in sightings">
-    <div class="panel-heading">
-        <div class="col-xs-1"><span class="badge">{{sighting.count}}</span></div>
-        <div class="col-xs-7">{{sighting.species}}</div>
-        <div class="col-xs-4">{{sighting.date}}</div>
+    <div class="panel-heading row">
+        <div class="col-xs-1">
+            <span class="badge">{{sighting.count}}</span>
+        </div>
+        <div class="col-xs-6">{{sighting.species}}</div>
+        <div class="col-xs-5">
+            <span class="pull-right">
+                {{sighting.dateTime | date : "HH:mm dd.MM.yyyy"}}
+            </span>
+        </div>
     </div>
 
     <div class="panel-body">
-        <div class="row">
-            {{sighting.description}}
-        </div>
-
-        <div class="row">
-
-        </div>
+        {{sighting.description}}
     </div>
 </div>
-
