--- a/client/templates/sightings.html
+++ b/client/templates/sightings.html
@@ -10,7 +10,7 @@
         <div class="col-xs-1">
             <span class="badge">{{sighting.count}}</span>
         </div>
-        <div class="col-xs-6">{{sighting.species}}</div>
+        <div class="col-xs-6 capital-letter">{{sighting.species}}</div>
         <div class="col-xs-5">
             <span class="pull-right">
                 {{sighting.dateTime | date : "HH:mm dd.MM.yyyy"}}
