Redirect to addSighting.html.

--- a/client/templates/sightings.html
+++ b/client/templates/sightings.html
@@ -1,7 +1,7 @@
 <h1>Duck sightings</h1>
 
 <button type="button" id="add-button" class="btn btn-success"
-        data-ng-click=""><span
+        data-ng-click="addSighting()"><span
         class="glyphicon glyphicon-plus"></span> Add sighting
 </button>
 
