--- a/client/templates/sightings.html
+++ b/client/templates/sightings.html
@@ -13,7 +13,7 @@
         <div class="col-xs-6 capital-letter">{{sighting.species}}</div>
         <div class="col-xs-5">
             <span class="pull-right">
-                {{sighting.dateTime | date : "HH:mm dd.MM.yyyy"}}
+                {{sighting.dateTime | date : "dd-MM-yyyy HH:mm"}}
             </span>
         </div>
     </div>
