--- a/client/css/style.css
+++ b/client/css/style.css
@@ -17,3 +17,19 @@
 .capital-letter:first-letter {
     text-transform: capitalize;
 }
+
+/* ------------------ addSighting.html ------------------ */
+#add-heading {
+    margin-bottom: 40px;
+}
+
+.no-padding {
+    padding: 0;
+}
+
+@media (min-width: 768px) {
+    .no-padding {
+        padding-right: 12px;
+    }
+}
+
