--- a/client/templates/sightings.html
+++ b/client/templates/sightings.html
@@ -1,17 +1,28 @@
 <h1>Duck sightings</h1>
 
-<button type="button" id="add-button" class="btn btn-success"
-        data-ng-click="addSighting()"><span
-        class="glyphicon glyphicon-plus"></span> Add sighting
-</button>
+<div class="row">
+    <div class="col-xs-2">
+        <button type="button" class="btn btn-success sighting-button"
+                data-ng-click="addSighting()"><span
+                class="glyphicon glyphicon-plus"></span> Add sighting
+        </button>
+    </div>
+    <div class="col-xs-3 pull-right">
+        <button type="button" class="btn btn-default sighting-button pull-right"
+                data-ng-click="toggleSort()"><span
+                class="glyphicon glyphicon-chevron-down"></span> Sort
+        </button>
+    </div>
+</div>
 
-<div class="panel panel-default" data-ng-repeat="sighting in sightings">
+<div class="panel panel-default" data-ng-repeat="sighting in sightings |
+orderBy: 'dateTime' : reverse">
     <div class="panel-heading row">
         <div class="col-xs-1">
             <span class="badge">{{sighting.count}}</span>
         </div>
-        <div class="col-xs-6 capital-letter">{{sighting.species}}</div>
-        <div class="col-xs-5">
+        <div class="col-xs-5 capital-letter">{{sighting.species}}</div>
+        <div class="col-xs-6">
             <span class="pull-right">
                 {{sighting.dateTime | date : "dd/MM/yyyy HH:mm"}}
             </span>
