--- a/client/templates/sightings.html
+++ b/client/templates/sightings.html
@@ -9,8 +9,10 @@
     </div>
     <div class="col-xs-3 pull-right">
         <button type="button" class="btn btn-default sighting-button pull-right"
-                data-ng-click="toggleSort()"><span
-                class="glyphicon glyphicon-chevron-down"></span> Sort
+                data-ng-click="toggleSort()">
+            <span class="glyphicon glyphicon-chevron-down chevron"
+                  data-ng-class="{'chevron-open' : chevronSort}"></span>
+             Sort
         </button>
     </div>
 </div>
@@ -29,7 +31,7 @@ orderBy: 'dateTime' : reverse">
         </div>
     </div>
 
-    <div class="panel-body">
+    <div class="panel-body break-word">
         {{sighting.description}}
     </div>
 </div>
