--- a/client/templates/addSighting.html
+++ b/client/templates/addSighting.html
@@ -79,5 +79,9 @@
 
     <!-- SUBMIT -->
     <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="button" class="btn btn-default" id="cancel-button"
+            data-ng-click="cancel()">
+        Cancel
+    </button>
 
 </form>
