Remove font awesome.

--- a/client/templates/addSighting.html
+++ b/client/templates/addSighting.html
@@ -45,7 +45,7 @@
                                 <span class="input-group-btn"
                                       uib-dropdown-toggle>
                         <button type="button" class="btn btn-primary">
-                            <i class="fa fa-calendar"></i>
+                            <span class="glyphicon glyphicon-calendar"></span>
                         </button>
                     </span>
                             </div>
@@ -83,5 +83,4 @@
             data-ng-click="cancel()">
         Cancel
     </button>
-
 </form>
